# exam-swe-template

./: .gitignore  README.md
.github/workflows/: check_isucoutea.yml  check_refactor_code.yml
db_design_complicated/: README.md
isucoutea/: Dockerfile  README.md  benchmark.py  docker-compose.go.yml  docker-compose.yml  dockerfile  note.md
isucoutea/admin/: init.sql  insert.py
isucoutea/admin/config/: bashrc  nginx.conf
isucoutea/admin/data/: china_location.txt  kana.txt  (+3 more)
isucoutea/benchmark/: benchmark.py  run_benchmark.sh
isucoutea/docker/: start_app.sh
isucoutea/webapp/python/: app.ini  app.py  pyproject.toml  requirements.txt
isucoutea/webapp/python/templates/: index.html  layout.html  new.html
refactor_code/: .gitignore  README.md
refactor_code/python/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
refactor_code/python/application/: app.ini  app.py  forms.py  models.py  payment_service.py  settings.py  test.py
refactor_code/python/application/admin/: create_db.py
refactor_code/python/application/scripts/: resetdb.sh
refactor_code/python/application/templates/: cart.html  checkout.html  index.html  layout.html  login.html  signup.html  tea.html
refactor_code/python/docker/paymentmock/: Dockerfile
refactor_code/python/docker/paymentmock/mockserver/: app.py
refactor_code/python/docker/service/: Dockerfile  entrypoint.sh  nginx.conf  run_test.sh  start_app.sh
refactor_code/ruby/: .gitignore  Gemfile  README.md  Rakefile  app.rb  docker-compose.yml  models.rb  payment_service.rb
scripts/: start_docker_compose.bash
(+35 files in other folders)
